# agentic-adx

./: .gitignore  AGENTS.md  README.md  pyproject.toml
adx/: Dockerfile  go.mod  go.sum
adx/cmd/server/: main.go  main_test.go
adx/internal/ab/: manager.go  manager_test.go
adx/internal/auction/: auction.go  auction_test.go
adx/internal/baseline/: deepfm.go  deepfm_test.go
adx/internal/event/: producer.go  producer_test.go
adx/internal/fallback/: scorer.go  scorer_test.go
adx/internal/filter/: filter.go
adx/internal/gpr/: cache.go  client.go
adx/internal/model/: openrtb.go
adx/internal/pipeline/: pipeline.go  pipeline_test.go
adx/internal/vector/: qdrant.go
agents/: bidding_agent.py  compliance.py  creative_agent.py  mab.py  test_bidding_agent.py
agents/tests/: test_creative_agent.py
data/: ab_report.py  test_ab_report.py
data/flink/: __init__.py  sample_cleaner.py  test_data_loop.py  test_sample_cleaner.py  training_trigger.py  vector_updater.py
demo/: demo_flow.md  run.sh
deploy/: Dockerfile.agents  Dockerfile.data-loop  Dockerfile.gpr-scorer  Dockerfile.gpr-scorer-gpu  Dockerfile.llama  Dockerfile.llama-gpu  docker-compose.gpu.yml  docker-compose.yml
deploy/loki/: loki-config.yaml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
deploy/promtail/: promtail-config.yaml
deploy/schema/: clickhouse_init.sql  init.sql  seed_ads.json  seed_ads.py
draft/: product-idea.md
gpr/embedding/: embed.py
gpr/model/: gpr_model.py
gpr/serve/: cpu_scorer.py  serve.py
gpr/train/: pretrain.py
sim/: go.mod  ssp_sim.go
(+5 files in other folders)
