[project]
name = "gpr-adx"
version = "0.1.0"
description = "GPR ADX - Generative Pre-trained Recommendation Ad Exchange"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "redis>=5.0",
    "torch>=2.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pymysql>=1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=gpr"

[dependency-groups]
dev = [
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "numpy>=2.2.6",
    "pymysql>=1.2.0",
    "pytest>=9.1.0",
    "sentence-transformers>=5.5.1",
]
